--- a/TODO
+++ b/TODO
@@ -8,9 +8,7 @@ TODO LIST:
 - Engine: bushes, da sostituire vector con list, OutOfTheBox non funziona
 - Engine: separare funzione per il movimento della pecora (possibile senza 
 		   multi-threading?)
+- Engine: aggiungere controllo sull'altezza
 - all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
-- Sketcher: opzione 'q' per uscire dalla WelcomeScreen, opzione 'n' per iniziare
-             una nuova partita
-- Engine: check_parameters errore per diverse dimensioni di game table
+- Sketcher: opzione 'q' per uscire dalla WelcomeScreen
 - Sketcher: errore dimensione, aggiungere stampa dimensione attuale
-- Sketcher: WelcomeScreen correggere altezza pecora
