--- a/TODO
+++ b/TODO
@@ -15,3 +15,4 @@ TODO LIST:
 - Engine: pecora dopo la schermata di uscita non resetta la sua posizione
 - Sketcher: nella schermata iniziale il tempo di attesa per la pressione dei
              tasti è troppo alto
+- Rete: aggiungere gestione eccezioni
