Added bulls creation, animation and sending in evil mode. Initial implementation of bulls in good mode, but there is no synchronization, it can't work yet. Created bull identity and methods in sketcher and obstacle.

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO LIST:
  
 - Obstacle: m_hitbox public can be wrong choice?
 - Obstacle: m_hitbox and m_ref as pointers could enhance performance?
+- Obstacle: controllare nomi funzioni movimento pecora
 - HitBox: in alcune situazioni (all'interno di un grosso rettangolo) la pecora 
            non è sovrapposta
 - Engine: alcune variabili possono essere messe static (seed, chrono, random)?
