Modified Sketcher::Rubber(SpaceBull) to erase bulls without erasing borders

--- a/TODO
+++ b/TODO
@@ -17,11 +17,9 @@ TODO LIST:
 - all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
 - Sketcher: opzione 'q' per uscire dalla WelcomeScreen
 - Sketcher: errore dimensione, aggiungere stampa dimensione attuale
-- Sketcher: disegno SpaceBull, possibile con due variabili intere in meno?
-- Sketcher: disegno SpaceBull, correggere creazione Bull, non so dove, spunta non gradualmente
-- Sketcher: modificare cancellazione SpaceBull
+(- Sketcher: disegno SpaceBull, possibile con due variabili intere in meno?)
 - Sketcher: nella schermata iniziale il tempo di attesa per la pressione dei
              tasti è troppo alto
 - Rete: aggiungere gestione eccezioni ( timeout? )
-- Rete: considerare se mettere poll a send()
 - Rete: controllo costruttore socket con good()
+(- Rete: considerare se mettere poll a send())
