--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 TODO LIST:
  
+- all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
+- all: aggiungere global namespace prima delle funzioni definite globalmente?
 - Obstacle: m_hitbox and m_ref as pointers could enhance performance?
 - Obstacle: controllare nomi funzioni movimento pecora
 - Obstacle: cambiare metodi contenenti 'fatness' sostituendoci 'radius'
@@ -14,7 +16,6 @@ TODO LIST:
 - Engine: controllare eliminazione elementi del vettore di cespugli
 - Engine: capire perché bull in run_evil() rallenta dopo che il gioco viene bloccato in run_good()
 - Engine: pecora dopo la schermata di uscita non resetta la sua posizione
-- all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
 - Sketcher: opzione 'q' per uscire dalla WelcomeScreen
 - Sketcher: errore dimensione, aggiungere stampa dimensione attuale
 (- Sketcher: disegno SpaceBull, possibile con due variabili intere in meno?)
