--- a/TODO
+++ b/TODO
@@ -1,17 +1,21 @@
 TODO LIST:
- 
+
 - all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
 - all: aggiungere global namespace prima delle funzioni definite globalmente?
 - all: disegnare tutto in grassetto? difetto cornice
+- all: correggere periodicamente 'errori' riportati da 'gcc -Wall -Wextra'
+			possibile rimuovere l'avvertimento sulle funzioni di Hitbox?
+- all: si potrebbero sostituire molti 'unisgned int' con 'unsigned short int',
+			ma probabilmente non ne vale la pena
 - Obstacle: m_hitbox and m_ref as pointers could enhance performance?
 - Obstacle: controllare nomi funzioni movimento pecora
 - Obstacle: cambiare metodi contenenti 'fatness' sostituendoci 'radius'
 - Obstacle/HitBox: verificare nomi metodi, get_ref() o get_v()?
-- HitBox: in alcune situazioni (all'interno di un grosso rettangolo) la pecora 
+- HitBox: in alcune situazioni (all'interno di un grosso rettangolo) la pecora
            non è sovrapposta
 - Engine: alcune variabili possono essere messe static (seed, chrono, random)?
 - Engine: bushes, da sostituire vector con list, OutOfTheBox non funziona
-- Engine: separare funzione per il movimento della pecora (possibile senza 
+- Engine: separare funzione per il movimento della pecora (possibile senza
 		   multi-threading?)
 - Engine: aggiungere controllo sull'altezza
 - Engine: controllare eliminazione elementi del vettore di cespugli
