--- a/TODO
+++ b/TODO
@@ -5,21 +5,17 @@ TODO LIST:
 			possibile rimuovere l'avvertimento sulle funzioni di Hitbox?
 - all: verificare che tutti i membri ed i metodi privati siano contrassegnati
 - all: contrassegnare come const tutte le funzioni che non modificano i membri
+- all: rendere coerenti i nomi dei metodi delle varie classi (sketcher?)
 - Obstacle: controllare nomi funzioni movimento pecora
 - Obstacle: cambiare metodi contenenti 'fatness' sostituendoci 'radius'
 - Obstacle/HitBox: verificare nomi metodi, get_ref() o get_v()?
 - Engine: controllare eliminazione elementi del vettore di cespugli
 - Engine: capire perché bull in run_evil() rallenta dopo che il gioco viene
 			bloccato in run_good()
-- Engine/Rete: o si aggiunge gestione eccezioni della Rete in Engine o si toglie
-			l'abbozzo presente fino ad ora, che uccide il programma non nel main
 - Rete: aggiungere gestione eccezioni ( timeout? )
-- Sketcher: errore dimensione, aggiungere stampa dimensione attuale
-- Sketcher: nella schermata iniziale il tempo di attesa per la pressione dei
-			tasti è troppo alto
+- Sketcher: verificare errore dimensione e aggiungere stampa dimensione attuale
 
 -- all: aggiungere global namespace prima delle funzioni definite globalmente?
--- all: disegnare tutto in grassetto? difetto cornice
 -- all: si potrebbero sostituire molti 'unsigned int' con 'unsigned short int',
 			ma probabilmente non ne vale la pena
 -- HitBox: in alcune situazioni (all'interno di un grosso rettangolo) la pecora
@@ -33,4 +29,3 @@ TODO LIST:
 -- Engine: separare funzione per il movimento della pecora (possibile senza
 			multi-threading?)
 -- Sketcher: disegno SpaceBull, possibile con due variabili intere in meno?
--- Rete: considerare se mettere poll a send()
