--- a/TODO
+++ b/TODO
@@ -1,15 +1,29 @@
 TODO LIST:
 
+-!UDPSSMcast/Engine: passare da 'char' ad 'unsigned char', altrimenti il i valori
+			permessi sono [-127:128] e non [0:255]
+-!Engine: rispettare la 'regola dei tre' (o quattro) del C++, fornendo alla
+			classe un copy constructor ed un assignment operator, se il punto
+			successivo viene risolto, questo non dovrebbe più essere necessario
+-!Engine: perché abbiamo usato puntatori come membri? probabilmente ci sono modi
+			più intelligenti di fare le stesse cose senza puntatori, o almeno
+			utilizzando degli smart_pointer, utilizzare la 'heap' NON è più
+			performante che utilizzare la 'stack'!
+
 - all: rivedere e ampliare i commenti (aggiornarli alla gestione delle eccezioni)
 - all: correggere periodicamente 'errori' riportati da 'gcc -Wall -Wextra'
 			possibile rimuovere l'avvertimento sulle funzioni di Hitbox?
+- Engine: verificare che 'front()' e 'back()' siano usati su vettori di
+			dimensione non nulla, altrimenti comportamento indefinito, anche se
+			risulta corretto l'utilizzo è necessario un commento esplicativo
 - Engine: migliorare gestione variabili per caratteristiche del gioco
 - Engine: capire perché bull in run_evil() rallenta dopo che il gioco viene
 			bloccato in run_good(), probabilmente poll() non rispetta i tempi
 - Engine: stoppare run_evil() se non riceve più niente per un po' (good sparisce)?
 - Engine: gestione eccezioni recv(), giusto uccidere tutto?
 - Engine/Rete: perché se al primo tentativo di fornire un indirizzo IP questo
-			è vuoto il gioco entra in un loop?
+			è vuoto il gioco entra in un loop? workaround in Engine, ma non è
+			una soluzione
 
 -- all: aggiungere global namespace prima delle funzioni definite globalmente?
 -- all: si potrebbero sostituire molti 'unsigned int' con 'unsigned short int',
