--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO LIST:
 
--!UDPSSMcast/Engine: passare da 'char' ad 'unsigned char', altrimenti il i valori
+-!UDPSSMcast/Engine: passare da 'char' ad 'unsigned char', altrimenti i valori
 			permessi sono [-127:128] e non [0:255]
 -!Engine: rispettare la 'regola dei tre' (o quattro) del C++, fornendo alla
 			classe un copy constructor ed un assignment operator, se il punto
